# test_gtest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: logic_function.h  main.cc
test/: test_logic_function.cc
